# cross-lingual-phoneme-aware-speech-enhancement-with-adaptive-masking

./: .gitignore  FINAL_CHECKLIST.md  PROJECT_SUMMARY.txt  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: evaluation_report.md  evaluation_results.csv  evaluation_results.json  results.json  training_history.json
scripts/: evaluate.py  predict.py  train.py
src/cross_lingual_phoneme_aware_speech_enhancement_with_adaptive_masking/: __init__.py
src/cross_lingual_phoneme_aware_speech_enhancement_with_adaptive_masking/evaluation/: __init__.py  analysis.py  metrics.py
src/cross_lingual_phoneme_aware_speech_enhancement_with_adaptive_masking/models/: __init__.py  components.py  model.py
src/cross_lingual_phoneme_aware_speech_enhancement_with_adaptive_masking/training/: trainer.py
src/cross_lingual_phoneme_aware_speech_enhancement_with_adaptive_masking/utils/: config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
